# hopdeck

./: .gitignore  Package.swift  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
Docs/: IMPLEMENTATION_PLAN.md  PRODUCT_DESIGN.md  RUST_TAURI_TREE_MODEL_DESIGN.md
Resources/: Info.plist
Sources/App/: AppDelegate.swift  AppSidebarItem.swift  ConnectionDiagnosticsView.swift  HostEditorPanelView.swift  HostInspectorView.swift  MainWindowController.swift  SettingsWindowController.swift  SidebarController.swift  WorkspaceController.swift
Sources/Core/: ConnectionDiagnosticsService.swift  DocumentStoreSupport.swift  MigrationService.swift  OpenSSHCommandBuilder.swift  TerminalProcessAdapter.swift
Sources/CoreChecks/: main.swift
assets/: AppIcon.icns
docs/: native-swift-implementation-plan.md  product-acceptance-checklist.md  terminal-interaction-design.md  tree-model.md  unimplemented.md
native/: Package.resolved  Package.swift  README.md
release/: Hopdeck_0.1.0_aarch64.app.tar.gz.sha256  Hopdeck_0.1.0_aarch64.app.tar.gz.sig  Hopdeck_0.1.0_aarch64.app.zip.sha256  Hopdeck_0.1.0_release_notes.md  latest.json  latest.json.sha256
scripts/: build_app.sh  generate_app_icon.swift  package-app.sh  prepare-release.mjs
src/: App.tsx  main.tsx  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  errors.rs  lib.rs  main.rs
src-tauri/src/models/: host.rs  mod.rs  settings.rs  tree.rs  vault.rs
src-tauri/src/ssh/: command_builder.rs  mod.rs
src-tauri/src/stores/: host_store.rs  mod.rs  settings_store.rs  vault_store.rs
src-tauri/src/terminal/: mod.rs
(+54 files in other folders)
