[package]
name = "hopdeck"
version = "0.1.0"
description = "Local-first SSH jump console"
authors = ["Hopdeck contributors"]
edition = "2021"

[lib]
name = "hopdeck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
directories = "6"
portable-pty = "0.8"
plist = "1.9"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2.3.2"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", default-features = false, features = ["std", "NSColor", "NSWindow"] }

[dev-dependencies]
tempfile = "3"
